project, contact info, formatting

--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Peter Jarrard's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- reset css -->
     <link rel="stylesheet" href="assets/css/reset.css">
+    <!-- general css -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- page specific css -->
+    <link rel="stylesheet" href="assets/css/contact_style.css">
 </head>
 
 <body>
@@ -18,16 +22,17 @@
             <h1 class="yourname">Peter Jarrard</h1>
 
             <div class="contact">
-                <a href="contact.html">Contact</a>
+                <a class="headerbutton" href="contact.html">Contact</a>
             </div>
             <div class="portfolio">
-                <a href="portfolio.html">Portfolio</a>
+                <a class="headerbutton" href="portfolio.html">Portfolio</a>
             </div>
             <div class="about">
-                <a href="index.html">About</a>
+                <a class="headerbutton" href="index.html">About</a>
             </div>
 
         </div>
+        <!-- end: .title div -->
 
     </header>
 
@@ -68,6 +73,16 @@
             <p id="submit"></p>
 
             <button>Submit</button>
+
+            <div id="linkedin">
+                <a href="https://www.linkedin.com/in/peterjarrard" target="_blank">LinkedIn</a>
+            </div>
+            <div id="github">
+                <a href="https://github.com/peterj330" target="_blank">GitHub</a>
+            </div>
+            <div id="email">
+                <a href="mailto:peter.a.jarrard@gmail.com" target="_blank">Peter.A.Jarrard@Gmail.com</a>
+            </div>
 
 
 
