--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <h1 class="yourname">Peter Jarrard</h1>
             <!-- <section class="links"> -->
             <div class="contact">
-                <a href="contact.html">Contact</a>
+                <a class="headerbutton" href="contact.html">Contact</a>
             </div>
             <div class="portfolio">
-                <a href="portfolio.html">Portfolio</a>
+                <a class="headerbutton" href="portfolio.html">Portfolio</a>
             </div>
             <div class="about">
-                <a href="index.html">About</a>
+                <a class="headerbutton" href="index.html">About</a>
             </div>
             <!-- </section> -->
         </div>
