--- a/contact.html
+++ b/contact.html
@@ -40,54 +40,19 @@
 
         <div class="text">
 
-            <p>
-                <h2 class="subtitle">Contact</h2>
-            </p>
-
-            <p id="contactname">
-                Name
-            </p>
-            <input id="namefield" type="text" maxlength="90">
-            </p>
-
-            <br>
-
-            <p id="Email">
-                Email
-            </p>
-            <p>
-                <input id="emailfield" type="email" maxlength="90">
-            </p>
-
-            <br>
-
-            <p id="message">
-                Message
-            </p>
-            <p>
-                <textarea id="messagetext" maxlength="800"></textarea>
-            </p>
-
-            <br>
-
-            <p id="submit"></p>
-
-            <button>Submit</button>
-
             <div id="linkedin">
-                <a href="https://www.linkedin.com/in/peterjarrard" target="_blank">LinkedIn</a>
-            </div>
-            <div id="github">
-                <a href="https://github.com/peterj330" target="_blank">GitHub</a>
-            </div>
+                    <a href="https://www.linkedin.com/in/peterjarrard" target="_blank"> <img class="linkedinlogo" src="assets/images/linkedin.png" alt="LinkedIn"> </a>
+                </div>
+                <div id="github">
+                        <a href="https://github.com/peterj330" target="_blank"> <img class="githublogo" src="assets/images/GitHub_Logo.png" alt="GitHub"> </a>
+                    </div>
             <div id="email">
                 <a href="mailto:peter.a.jarrard@gmail.com" target="_blank">Peter.A.Jarrard@Gmail.com</a>
             </div>
 
-
-
         </div>
     </div>
+    
 
 
     <footer>
