--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,7 @@
                 <div id="github">
                         <a href="https://github.com/peterj330" target="_blank"> <img class="githublogo" src="assets/images/GitHub_Logo.png" alt="GitHub"> </a>
                     </div>
-            <div id="email">
-                <a href="mailto:peter.a.jarrard@gmail.com" target="_blank">Peter.A.Jarrard@Gmail.com</a>
+                <a href="mailto:peter.a.jarrard@gmail.com" target="_blank"><img class="emaillogo" src="assets/images/email_icon.jpg" alt="Email"></a>
             </div>
 
         </div>
