--- a/index.html
+++ b/index.html
@@ -41,27 +41,22 @@
             </p>
 
             <p>
-                <img class="image" src="assets/images/Screen Shot 2018-06-16 at 10.23.23 PM.png" alt="Profile Picture"> I was born and raised in Dallas, TX. I lived in Denton while attending University of North Texas wehre I
-                studied Biology and Chemistry for my undergraduate degree. After getting my Bachelors Degree I moved back
-                to Dallas and began working in logistics for a ground transportation company. After working in that industry
-                for five years I decided to go back to school to pursue an MBA and attended University of Texas at Dallas'
-                full-time MBA program. After graduation I began working as an IT Project Manager focusing in software development
-                and just celebrated my one year anniversary in June of 2018.
+                <img class="image" src="assets/images/Screen Shot 2018-06-16 at 10.23.23 PM.png" alt="Profile Picture"> I am an experienced 
+                professional with a background in logistics and operations management. While pursuing my MBA, my studies focused on supply 
+                chain management, operations management and financial analysis. Currently, I am an IT Project Manager with projects focusing in 
+                the development of new data processing and tracking software for an internal and external client base. 
             </p>
             <br>
             <p>
-                My hobbies include playing video games, reading sci-fi novels, going to local art galleries and museums, and cramming my
-                brain full of seemingly trivial factoids.
+                Outside of my current profession, I have focused my extracurricular activities around full-stack web application development. I have 
+                gained experience with HTML, CSS, Bootstrap, JavaScript, Jquery AJAX and API calls, Node.js, Firebase, and SQL.
             </p>
             <br>
-            <p>
-                I love to travel and my wife and I try and get out of town whenever we have the chance. In the past year we have been fortunate
-                enough to go to New York , Seattle, Portland, Hawaii, the Dominican Republic, Japan and Hong Kong and we
-                are currently planning our next big adventure for 2019.
+            <!-- <p>
+                
             </p>
             <br>
-            <p>I am super excited to be going through this bootcamp and looking forward to all of the awesome things we will
-                learn throughout the program.</p>
+            <p></p> -->
 
 
         </div>
