--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
                     <img id="image6" src="assets/images/My Journey Health App.png" alt="Group Project">
                     <div id="imagetext6">
                         <div id="text6">
-                            <a href="https://peterj330.github.io/GroupProject/" target="_blank">Project: Health App</a>
+                            <a href="https://peterj330.github.io/GroupProject/" target="_blank">Health App</a>
                         </div>
                     </div>
                 </div>
